src/tui/render/snapshots/frame__tui__render__tracks_view__tests__overview_multiple_tracks.snap
---
source: src/tui/render/tracks_view.rs
expression: output
---
 Project: Test · actor: unclaimed
           pfx   todo  act  blk done park
 Active           [ ]  [>]  [-]  [x]  [~]
▎1  Alpha  ALPHA    1    1    0    1    0
 2  Beta   BETA     0    0    1    0    0
