src/tui/render/snapshots/frame__tui__render__tracks_view__tests__overview_single_track.snap
---
source: src/tui/render/tracks_view.rs
expression: output
---
 Project: Test · actor: unclaimed
          pfx  todo  act  blk done park
 Active         [ ]  [>]  [-]  [x]  [~]
▎1  Test  TEST    1    1    1    1    0
